pod-dynamic-provisioning.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: efs-app-dynamic-provisioning
spec:
  containers:
    - name: app
      image: rockylinux:8
      command: ["/bin/sh"]
      args: ["-c", "while true; do echo $(date -u) >> /data/out; sleep 5; done"]
      volumeMounts:
        - name: persistent-storage
          mountPath: /data
  volumes:
    - name: persistent-storage
      persistentVolumeClaim:
        claimName: efs-claim-dynamic-provisioning
